src/objects/File_Access__c.object
<CustomObject>
    <fields>
        <fullName>Attendee__c</fullName>
        <label>Attendee</label>
        <referenceTo>Attendee__c</referenceTo>
        <relationshipName>S3_File_Accesses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <formula>Attendee__r.Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+ Attendee__r.Contact__c ,   Attendee__r.Contact__r.FirstName  +&apos; &apos;+ Attendee__r.Contact__r.LastName,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File__c</fullName>
        <label>File</label>
        <referenceTo>AWS_S3_Object__c</referenceTo>
        <relationshipLabel>File Access</relationshipLabel>
        <relationshipName>S3_File_Accesses</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>File Access</label>
    <nameField>
        <displayFormat>SFA-{00000000}</displayFormat>
        <label>S3 File Access Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Access</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>